--- a/src/Thin/Crud/paginator.phtml
+++ b/src/Thin/Crud/paginator.phtml
@@ -1,6 +1,6 @@
-<?php if ($this->paginator->last && $this->paginator->perPage <= $this->paginator->total): ?>
-    <div class="alert alert-block">Enregistrements <?php echo $this->paginator->firstItemNumber; ?> à <?php echo $this->paginator->lastItemNumber; ?> sur <?php echo $this->paginator->total; ?></div>
+<?php if ($paginator->last && $paginator->perPage <= $paginator->total): ?>
+    <div class="alert alert-success">Enregistrements <?php echo $paginator->firstItemNumber; ?> à <?php echo $paginator->lastItemNumber; ?> sur <?php echo $paginator->total; ?></div>
 
-    <?php echo $this->paginator->links(); ?>
+    <?php echo $paginator->links(); ?>
 <?php endif; ?>
 
